--- a/invoice.html
+++ b/invoice.html
@@ -184,7 +184,7 @@
             <div class="invoice">
                 <div class="header">
                     <div class="logo">
-                        <img src="logo.png" alt="Company Logo">
+                        <img src="./logo.png" alt="Company Logo">
                     </div>
                     <div class="company-details">
                         <h1>FRIENDS PACKS</h1>
