--- a/invoice.html
+++ b/invoice.html
@@ -84,7 +84,7 @@
                     border-right: 2px solid black;
                 }
                 .bill th, .bill td {
-                    padding: 8px;
+                    padding: 2px;
                     text-align: center;
                 }
                 .bank-total {
@@ -172,6 +172,9 @@
                     align-items: center;
                 }
                 .col {
+                    width: 5%;
+                }
+                .coll {
                     width: 10%;
                 }
                 .spl {
@@ -225,9 +228,9 @@
                                 <th class="col">HSN Code</th>
                                 <th class="col">DC No</th>
                                 <th class="column">Description</th>
-                                <th class="col">Quantity (Kgs/Nos)</th>
-                                <th class="col">Rate</th>
-                                <th class="col">Amount Rs.   Ps</th>
+                                <th class="coll">Quantity (Kgs/Nos)</th>
+                                <th class="coll">Rate</th>
+                                <th class="coll">Amount Rs.   Ps</th>
                             </tr>
                         </thead>
                         <tbody>
