--- a/invoice.html
+++ b/invoice.html
@@ -38,7 +38,7 @@
                     display: flex;
                 }
                 .tocompany .customer-details {
-                    width: 70%;
+                    width: 50%;
                     padding-left: 10px;
                     border-right: solid 2px black;
                     border-bottom: solid 2px black;
@@ -55,19 +55,26 @@
                     height: fit-content;
                 }
                 .tocompany .invoice-details {
-                    width: 30%;
+                    width: 50%;
                     border-bottom: solid 2px black;
                 }
                 .tocompany .invoice-details .tax {
                     text-align: center;
                     border-bottom: solid 2px black;
                 }
+                .tocompany .invoice-details .invv {
+                    display: flex;
+                    margin-top: -15px;
+                }
                 .tocompany .invoice-details .inv {
+                    width: 50%;
+                    border-right: solid 2px black;
                     border-bottom: solid 2px black;
                 }
-                .tocompany .invoice-details .inv, .tocompany .invoice-details .po {
-                    padding-left: 10px;
-                } 
+                .tocompany .invoice-details .po {
+                    width: 50%;
+                    border-bottom: solid 2px black;
+                }
                 .bill {
                     height: 270px;
                     border-bottom: solid 2px black;
@@ -175,7 +182,7 @@
                     width: 5%;
                 }
                 .coll {
-                    width: 10%;
+                    width: 7%;
                 }
                 .spl {
                     font-size: 20px;
@@ -210,13 +217,19 @@
                     </div>
                     <div class="invoice-details">
                         <h3 class="tax">TAX INVOICE</h3>
-                        <div class="inv">
-                            <h3>Invoice No: <span class="spl">1</span></h3>
-                            <h3>Date: <span class="spl">26/01/2025</span></h3>
+                        <div class="invv">
+                            <div class="inv">
+                                <h3>Invoice No: <span class="spl">1</span></h3>
+                                <h3>Date: 26/01/2025</h3>
+                            </div>
+                            <div class="po">
+                                <h3>PO No: <span class="spl">125</span></h3>
+                                <h3>Date: 26/01/2025</h3>
+                            </div>
                         </div>
-                        <div class="po">
-                            <h3>PO No: <span class="spl">125</span></h3>
-                            <h3>Date: <span class="spl">26/01/2025</span></h3>
+                        <div class="mode">
+                            <h3>Transpotation Mode: Eicher</h3>
+                            <h3>Place of Supply: Bangalore</span></h3>
                         </div>
                     </div>
                 </div>
